welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:1: error: not found: value num
def arrayFront9(nums:Array[Int]): Boolean = {var compteur = 0; if (nums.length < 5) {for (i<-0 to nums.length-1) {if (nums(i) == 9) {return true}}} else {for (i<-0 to 3) {if (num(i)==9) {return true}}}; return false}
                                                                                                                                                                               ^